WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228305
[ iOS Debug ] http/tests/xmlhttprequest/access-control-preflight-credential-sync.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=228305
Summary
[ iOS Debug ] http/tests/xmlhttprequest/access-control-preflight-credential-s...
ayumi_kojima
Reported
2021-07-26 16:26:02 PDT
http/tests/xmlhttprequest/access-control-preflight-credential-sync.html Is a flaky crash on iOS 14 E Simulator wk1 Debug. History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fxmlhttprequest%2Faccess-control-preflight-credential-sync.html&platform=ios
Crash log: 2021-07-24 14:34:45.321 com.apple.WebKit.Networking.Development[24895:27791477] DiskCookieStorage changing policy from 2 to 0, cookie file: file:///Users/buildbot/Library/Developer/CoreSimulator/Devices/166716B4-CF25-4A7A-A410-DD22E5D81DE3/data/Containers/Data/Application/5FD00734-602E-4B62-90F5-AB83B0F9DD9A/Library/Cookies/Cookies.binarycookies Failed to load 'about:blank', terminating process and trying again. ASSERTION FAILED: !isSynchronous() || !m_synchronousLoadData->delayedReply /Volumes/Data/worker/ios-simulator-14-debug/build/Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp(138) : virtual WebKit::NetworkResourceLoader::~NetworkResourceLoader() com.apple.WebKit.WebContent.Development terminated (pid 27914) because the client requested 1 0x1208b2bf9 WTFCrash 2 0x108b950ab WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1098a333d WebKit::NetworkResourceLoader::~NetworkResourceLoader() 4 0x1098a3785 WebKit::NetworkResourceLoader::~NetworkResourceLoader() 5 0x1092953bb std::__1::default_delete<WebKit::NetworkResourceLoader>::operator()(WebKit::NetworkResourceLoader*) const 6 0x109295322 WTF::RefCounted<WebKit::NetworkResourceLoader, std::__1::default_delete<WebKit::NetworkResourceLoader> >::deref() const 7 0x109846997 WTF::DefaultRefDerefTraits<WebKit::NetworkResourceLoader>::derefIfNotNull(WebKit::NetworkResourceLoader*) 8 0x109846959 WTF::RefPtr<WebKit::NetworkResourceLoader, WTF::RawPtrTraits<WebKit::NetworkResourceLoader>, WTF::DefaultRefDerefTraits<WebKit::NetworkResourceLoader> >::~RefPtr() 9 0x109820405 WTF::RefPtr<WebKit::NetworkResourceLoader, WTF::RawPtrTraits<WebKit::NetworkResourceLoader>, WTF::DefaultRefDerefTraits<WebKit::NetworkResourceLoader> >::~RefPtr() 10 0x10989e7a8 WebKit::NetworkResourceLoadMap::remove(unsigned long long) 11 0x1098200f3 WebKit::NetworkConnectionToWebProcess::didCleanupResourceLoader(WebKit::NetworkResourceLoader&) 12 0x1098a94e0 WebKit::NetworkResourceLoader::cleanup(WebKit::NetworkResourceLoader::LoadResult) 13 0x1098aa594 WebKit::NetworkResourceLoader::abort() 14 0x109821952 WebKit::NetworkConnectionToWebProcess::didClose(IPC::Connection&) 15 0x108c38647 IPC::Connection::connectionDidClose()::$_9::operator()() 16 0x108c3851e WTF::Detail::CallableWrapper<IPC::Connection::connectionDidClose()::$_9, void>::call() 17 0x1208e0b22 WTF::Function<void ()>::operator()() const 18 0x120969e10 WTF::RunLoop::performWork() 19 0x12096e841 WTF::RunLoop::performWork(void*) 20 0x103576ede __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 21 0x103576dd6 __CFRunLoopDoSource0 22 0x10357629e __CFRunLoopDoSources0 23 0x1035709f7 __CFRunLoopRun 24 0x1035701a7 CFRunLoopRunSpecific 25 0x102f5f204 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 26 0x102f5f418 -[NSRunLoop(NSRunLoop) run] 27 0x104e911a8 _xpc_objc_main 28 0x104e93143 xpc_main 29 0x1099a181b WebKit::XPCServiceMain(int, char const**) 30 0x10b1fe58b WKXPCServiceMain 31 0x102d8cd42 main
Attachments
Patch
(3.58 KB, patch)
2021-09-29 14:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ayumi_kojima
Comment 1
2021-07-26 16:26:11 PDT
I was not able to reproduce the crash on iOS 15 simulator on my local machine using run-webkit-tests --ios-simulator --iterations 50 --exit-after-n-failures 2 --exit-after-n-crashes-or-timeouts 2 --debug http/tests/xmlhttprequest/access-control-preflight-credential-sync.html
Radar WebKit Bug Importer
Comment 2
2021-07-26 16:50:27 PDT
<
rdar://problem/81136891
>
ayumi_kojima
Comment 3
2021-07-26 16:56:59 PDT
Updated test expectations
https://trac.webkit.org/changeset/280324/webkit
Chris Dumez
Comment 4
2021-09-29 14:54:12 PDT
Created
attachment 439665
[details]
Patch
EWS
Comment 5
2021-09-29 16:56:17 PDT
Committed
r283283
(
242310@main
): <
https://commits.webkit.org/242310@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439665
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug