[ iOS Debug ] http/tests/xmlhttprequest/access-control-preflight-credential-sync.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=228305 <rdar://problem/81136891>

Reviewed by Alex Christensen.

Source/WebKit:

When a NetworkResourceLoader for a synchronous XHR gets aborted (e.g. because the connection to
the WebProcess was severed), NetworkResourceLoader::abort() would fail to call
sendReplyToSynchronousRequest() (sendReplyToSynchronousRequest was only called in didFailLoading() and
didFinishLoading()). As a result, we would hit the following assertion in the NetworkResourceLoader
destructor later on: ASSERT(!isSynchronous() || !m_synchronousLoadData->delayedReply)

No new tests, covered by existing test that I am unskipping.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::abort):

LayoutTests:

Unskip test that should no longer be flaky.

* platform/ios-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/242310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283283 268f45cc-cd09-0410-ab3c-d52691b4dbfc